<resources>
    <string name="app_name">Telegram_UI</string>
    <string name="telegram">Telegram</string>
    <string name="all_chats">All Chats</string>
    <string name="personal">personal</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="image">image</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="please_conform_your_country_code_nenter_your_phone_number">Please conform your country code -\n   enter your phone number</string>
    <string name="please_confirm_your_country_code">Please confirm your country code</string>
    <string name="and_enter_your_phone_number">and enter your phone number</string>
    <string name="india">India</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="_91_0000000000">+91 0000000000</string>
    <string name="photo">Photo</string>
    <string name="_30">30</string>
</resources>