<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="10dp"
            android:id="@+id/userProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/txtuserName"
            app:layout_constraintStart_toEndOf="@+id/userProfile"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:layout_margin="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/userProfile"
            app:layout_constraintTop_toBottomOf="@+id/txtuserName"
            />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:background="@drawable/count_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textColor="@color/white"/>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>