<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/tele_blue"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbarSize="20dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/menu"
            android:id="@+id/imgMenu"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imgMenu"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/telegram"
            android:id="@+id/txtTelegram"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbarSize="20dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/search"
            android:id="@+id/imgSearch"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/imgMenu"
            app:layout_constraintTop_toBottomOf="@+id/txtTelegram"
            android:text="@string/all_chats"
            android:id="@+id/txtAllChats"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelegram"
            android:layout_marginEnd="30dp"
            android:text="@string/personal"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>